--- a/travel-agency.html
+++ b/travel-agency.html
@@ -10,6 +10,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
   <body class="d-flex flex-column vh-100">
     <header>
@@ -19,7 +23,7 @@
             ><img
               src="assets/imgs/evelin logo.png"
               alt="travel agency logo"
-              width="30%"
+              width="80px"
           /></a>
           <button
             class="navbar-toggler"
@@ -66,20 +70,342 @@
       </nav>
     </header>
     <main class="flex-grow-1">
-      <div class="card">
-        <div class="card-header">Featured</div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card m-5 p-3 bg-light border-0">
+        <div class="d-flex align-items-center ms-3">
+          <h1 class="fw-light">Evelin-R</h1>
+          <h6 class="fw-light">-Feel the Freedom</h6>
+        </div>
+        <hr />
+        <div class="card-body pt-0">
+          <h5 class="card-title fst-italic fw-light mb-3">
+            Scopri le destinazioni più calde del momento!
+          </h5>
+          <a href="#" class="btn btn-primary bg-info border-0 px-5"
+            >Prenota ora</a
+          >
+        </div>
+      </div>
+      <div class="container">
+        <h2>Saldi</h2>
+        <div class="row g-3 row-cols-2 row-cols-md-3 row-cols-lg-4 m-3">
+          <div class="col">
+            <div class="card border-info border-4">
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-info border-4">
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-info border-4">
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col d-md-none d-lg-block">
+            <div class="card border-info border-4">
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h2>Welcome Summer</h2>
+        <div class="row g-3 row-cols-2 row-cols-lg-3 row-cols-xxl-6 m-3">
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow-lg">
+              <span
+                class="badge text-bg-danger position-absolute top-0 end-0 mt-2 me-2"
+                >HOT</span
+              >
+              <img
+                src="assets/imgs/extreme-wow-ocean-escape.jpg"
+                class="card-img-top"
+                alt="Ocean wow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Titolo</h5>
+                <p class="card-text">
+                  Some quick example text to build on the Titolo and make up the
+                  bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary bg-info border-0">Prenota</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h2>Offerta del giorno</h2>
+        <div class="row m-3">
+          <div class="col col-6 col-lg-9">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="card-img-top shadow max-height-75"
+              alt="Ocean wow"
+            />
+          </div>
+          <div class="col col-6 col-lg-3">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas
+              deserunt error tempore! Adipisci perferendis, voluptas debitis
+              possimus, vel molestias minima, expedita fuga animi maxime non
+              aliquam dolore rerum consectetur incidunt?
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h2>Last Minute</h2>
+        <div class="row g-3 m-3">
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+          <div class="col col-6 col-md-4 col-lg-2">
+            <img
+              src="assets/imgs/extreme-wow-ocean-escape.jpg"
+              class="shadow"
+              alt="Ocean wow"
+              height="120px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h2 class="text-center">Dicono di noi</h2>
+        <div class="row">
+          <div class="col col-1" style="width: 50px">
+            <i class="bi bi-person-circle"></i>
+          </div>
+          <div class="col col-11">
+            <h3>Username</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              nisi qui praesentium iure iusto quo cupiditate quasi, doloribus,
+              tempore quaerat obcaecati ipsum voluptates inventore magnam eaque
+              illo aliquid corporis doloremque.
+            </p>
+          </div>
+          <div class="col col-1" style="width: 50px">
+            <i class="bi bi-person-circle"></i>
+          </div>
+          <div class="col col-11">
+            <h3>Username</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              nisi qui praesentium iure iusto quo cupiditate quasi, doloribus,
+              tempore quaerat obcaecati ipsum voluptates inventore magnam eaque
+              illo aliquid corporis doloremque.
+            </p>
+          </div>
+          <div class="col col-1" style="width: 50px">
+            <i class="bi bi-person-circle"></i>
+          </div>
+          <div class="col col-11">
+            <h3>Username</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              nisi qui praesentium iure iusto quo cupiditate quasi, doloribus,
+              tempore quaerat obcaecati ipsum voluptates inventore magnam eaque
+              illo aliquid corporis doloremque.
+            </p>
+          </div>
         </div>
       </div>
     </main>
-    <div class="container-fluid">
-      <footer class="py-3 my-4 bg-dark">
+    <div class="container-fluid px-0">
+      <footer class="py-3 my-0 bg-dark">
         <div class="nav-item text-center m-3 cursor-pointer">
           <button
             type="button"
