some tiny improvements

--- a/travel-agency.html
+++ b/travel-agency.html
@@ -70,8 +70,10 @@
       </nav>
     </header>
     <main class="flex-grow-1">
-      <div class="card m-5 p-3 bg-light border-0">
-        <div class="d-flex align-items-center ms-3">
+      <div class="card m-5 p-3 bg-light border-0 text-center text-md-start">
+        <div
+          class="d-flex align-items-center justify-content-center justify-content-md-start ms-3"
+        >
           <h1 class="fw-light">Evelin-R</h1>
           <h6 class="fw-light">-Feel the Freedom</h6>
         </div>
